@@ -16,4 +16,4 @@ export RANLIB="$TARGET-ranlib"
 
 export CFLAGS='-mabi=sysv -mcmodel=kernel -mno-80387 -mno-red-zone'
 
-"$REPO/configure" --host="$HOST" --prefix="$PREFIX" --enable-freestanding --with-libc-all
+"$REPO/configure" --host="$HOST" --prefix="$PREFIX" --enable-freestanding
