@@ -1,3 +1,7 @@
+2022-06-07  Alex Kotov  <kotovalexarian@gmail.com>
+
+	* include/kernaux/libc.h: Removed
+
 2022-06-06  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* include/kernaux/libc.h: Add more functions
